--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,14 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<section>
+    <ul>
+        @foreach (var website in ViewBag.Websites){
+            <li>
+                <h2>@website.websiteTitle</h2>
+            </li>
+            
+        }
+    </ul>
+</section>
